[package]
name = "move-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
move-binary-format = { git = "https://github.com/move-language/move", rev = "a6e1ffba1dab6b5d9f2804a91cd48e6b928e1b3b" }
move-core-types = { git = "https://github.com/move-language/move", rev = "a6e1ffba1dab6b5d9f2804a91cd48e6b928e1b3b" }
itertools = "0.10.5"
serde_json = "1.0"
serde = "1.0"
